--- a/Index.html
+++ b/Index.html
@@ -49,6 +49,7 @@
         <a href="./assignment2.html">Assignment2</a>
         <a href="./assignment3.html">Assignment3</a>
         <a href="./assignment4.html">Assignment4</a>
+        <a href="./assignment5.html">Assignment5</a>
     </nav>
     </div>
 </body>
